[project]
name = "pt2-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "depyf>=0.19.0",
    "numpy>=2.2.6",
    "tabulate>=0.9.0",
    "tlparse>=0.3.44",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "triton>=3.3.0",
]
